--- a/src/AnyStatus/AnyStatus.csproj
+++ b/src/AnyStatus/AnyStatus.csproj
@@ -135,6 +135,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\AnyStatusApp.cs" />
+    <Compile Include="Core\ICommandRegistry.cs" />
     <Compile Include="Features\Commands\BaseCommand.cs" />
     <Compile Include="Features\Commands\CollapseAllCommand.cs" />
     <Compile Include="Features\Commands\ExpandAllCommand.cs" />
