--- a/src/AnyStatus/AnyStatus.csproj
+++ b/src/AnyStatus/AnyStatus.csproj
@@ -159,6 +159,7 @@
     <Compile Include="Features\HealthChecks\GitHubIssue.cs" />
     <Compile Include="Features\HealthChecks\PowerShellScript.cs" />
     <Compile Include="Features\HealthChecks\TfsWorkItem.cs" />
+    <Compile Include="Features\ToolWindow\Commands\DeleteCommand.cs" />
     <Compile Include="Features\ToolWindow\Commands\DisableCommand.cs" />
     <Compile Include="Features\ToolWindow\Commands\EnableCommand.cs" />
     <Compile Include="Features\ToolWindow\TooltipConverter.cs" />
