--- a/src/AnyStatus/AnyStatus.csproj
+++ b/src/AnyStatus/AnyStatus.csproj
@@ -53,6 +53,9 @@
       <HintPath>..\packages\Microsoft.VisualStudio.Imaging.14.3.25407\lib\net45\Microsoft.VisualStudio.Imaging.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.VisualStudio.Imaging.Interop.14.0.DesignTime, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="Microsoft.VisualStudio.OLE.Interop, Version=7.1.40304.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <HintPath>..\packages\Microsoft.VisualStudio.OLE.Interop.7.10.6070\lib\Microsoft.VisualStudio.OLE.Interop.dll</HintPath>
       <Private>True</Private>
@@ -162,8 +165,10 @@
     <Compile Include="Features\ToolWindow\Commands\DeleteCommand.cs" />
     <Compile Include="Features\ToolWindow\Commands\DisableCommand.cs" />
     <Compile Include="Features\ToolWindow\Commands\EnableCommand.cs" />
+    <Compile Include="Features\ToolWindow\Converters\StateToImageConverter.cs" />
+    <Compile Include="Features\ToolWindow\Converters\StateToMonikerConverter.cs" />
     <Compile Include="Features\ToolWindow\TooltipConverter.cs" />
-    <Compile Include="Features\ToolWindow\StateToBrushConverter.cs" />
+    <Compile Include="Features\ToolWindow\Converters\StateToBrushConverter.cs" />
     <Compile Include="Infrastructure\Discovery.cs" />
     <Compile Include="Infrastructure\Extensions.cs" />
     <Compile Include="Features\HealthChecks\TCP.cs" />
@@ -243,6 +248,24 @@
       <Generator>PublicSettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Icons\StatusAlert_grey_16x.png" />
+    <Resource Include="Resources\Icons\StatusBlocked_grey_16x.png" />
+    <Resource Include="Resources\Icons\StatusCriticalError_grey_16x.png" />
+    <Resource Include="Resources\Icons\StatusHelp_gray_16x.png" />
+    <Resource Include="Resources\Icons\StatusInformation_grey_16x.png" />
+    <Resource Include="Resources\Icons\StatusInvalid_grey_16x.png" />
+    <Resource Include="Resources\Icons\StatusNo_grey_16x.png" />
+    <Resource Include="Resources\Icons\StatusOK_grey_16x.png" />
+    <Resource Include="Resources\Icons\StatusPause_grey_16x.png" />
+    <Resource Include="Resources\Icons\StatusReady_grey_16x.png" />
+    <Resource Include="Resources\Icons\StatusRun_grey_16x.png" />
+    <Resource Include="Resources\Icons\StatusStop_grey_16x.png" />
+    <Resource Include="Resources\Icons\StatusWarning_grey_16x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Icons\Blank.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
