--- a/src/AnyStatus/app.config
+++ b/src/AnyStatus/app.config
@@ -19,6 +19,12 @@
             <setting name="FirstTimeInstallation" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="ShowStatusIcons" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ShowStatusColors" serializeAs="String">
+                <value>True</value>
+            </setting>
         </AnyStatus.Properties.Settings>
     </userSettings>
 </configuration>
