--- a/src/AnyStatus/Properties/Settings.settings
+++ b/src/AnyStatus/Properties/Settings.settings
@@ -14,5 +14,11 @@
     <Setting Name="FirstTimeInstallation" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="ShowStatusIcons" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="ShowStatusColors" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
