show status icons  as default #17

--- a/src/AnyStatus/app.config
+++ b/src/AnyStatus/app.config
@@ -20,7 +20,7 @@
                 <value>True</value>
             </setting>
             <setting name="ShowStatusIcons" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="ShowStatusColors" serializeAs="String">
                 <value>True</value>
