--- a/src/AnyStatus/Properties/Settings.settings
+++ b/src/AnyStatus/Properties/Settings.settings
@@ -15,7 +15,7 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="ShowStatusIcons" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="ShowStatusColors" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
