--- a/src/AnyStatus/AnyStatus.csproj
+++ b/src/AnyStatus/AnyStatus.csproj
@@ -157,10 +157,11 @@
     <Compile Include="Features\HealthChecks\Editors\PasswordEditor.cs" />
     <Compile Include="Features\HealthChecks\BatchFile.cs" />
     <Compile Include="Core\Monitoring\IScheduledItem.cs" />
-    <Compile Include="Features\HealthChecks\ItemState.cs" />
+    <Compile Include="Features\HealthChecks\State.cs" />
     <Compile Include="Features\HealthChecks\RootItem.cs" />
     <Compile Include="Features\HealthChecks\GitHubIssue.cs" />
     <Compile Include="Features\HealthChecks\PowerShellScript.cs" />
+    <Compile Include="Features\HealthChecks\StateConfiguration.cs" />
     <Compile Include="Features\HealthChecks\TfsWorkItem.cs" />
     <Compile Include="Features\ToolWindow\Commands\DeleteCommand.cs" />
     <Compile Include="Features\ToolWindow\Commands\DisableCommand.cs" />
@@ -169,6 +170,7 @@
     <Compile Include="Features\ToolWindow\Converters\StateToMonikerConverter.cs" />
     <Compile Include="Features\ToolWindow\Converters\TooltipConverter.cs" />
     <Compile Include="Features\ToolWindow\Converters\StateToBrushConverter.cs" />
+    <Compile Include="Features\HealthChecks\StateMetadata.cs" />
     <Compile Include="Infrastructure\Discovery.cs" />
     <Compile Include="Infrastructure\Extensions.cs" />
     <Compile Include="Features\HealthChecks\TCP.cs" />
@@ -195,6 +197,7 @@
     <Compile Include="Features\HealthChecks\JenkinsBuild.cs" />
     <Compile Include="Features\HealthChecks\Ping.cs" />
     <Compile Include="Features\HealthChecks\Template.cs" />
+    <Compile Include="Infrastructure\SerializableDictionary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
