--- a/src/AnyStatus/AnyStatus.csproj
+++ b/src/AnyStatus/AnyStatus.csproj
@@ -152,17 +152,17 @@
       <DependentUpon>EditWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Features\Edit\EditViewModel.cs" />
-    <Compile Include="Features\HealthChecks\AppVeyorBuild.cs" />
-    <Compile Include="Features\HealthChecks\Editors\FileEditor.cs" />
-    <Compile Include="Features\HealthChecks\Editors\PasswordEditor.cs" />
-    <Compile Include="Features\HealthChecks\BatchFile.cs" />
+    <Compile Include="Features\Monitors\AppVeyorBuild.cs" />
+    <Compile Include="Features\Monitors\Editors\FileEditor.cs" />
+    <Compile Include="Features\Monitors\Editors\PasswordEditor.cs" />
+    <Compile Include="Features\Monitors\BatchFile.cs" />
     <Compile Include="Core\Monitoring\IScheduledItem.cs" />
-    <Compile Include="Features\HealthChecks\State.cs" />
-    <Compile Include="Features\HealthChecks\RootItem.cs" />
-    <Compile Include="Features\HealthChecks\GitHubIssue.cs" />
-    <Compile Include="Features\HealthChecks\PowerShellScript.cs" />
-    <Compile Include="Features\HealthChecks\StateConfiguration.cs" />
-    <Compile Include="Features\HealthChecks\TfsWorkItem.cs" />
+    <Compile Include="Features\Monitors\State.cs" />
+    <Compile Include="Features\Monitors\RootItem.cs" />
+    <Compile Include="Features\Monitors\GitHubIssue.cs" />
+    <Compile Include="Features\Monitors\PowerShellScript.cs" />
+    <Compile Include="Features\Monitors\StateConfiguration.cs" />
+    <Compile Include="Features\Monitors\TfsWorkItem.cs" />
     <Compile Include="Features\ToolWindow\Commands\DeleteCommand.cs" />
     <Compile Include="Features\ToolWindow\Commands\DisableCommand.cs" />
     <Compile Include="Features\ToolWindow\Commands\EnableCommand.cs" />
@@ -170,14 +170,14 @@
     <Compile Include="Features\ToolWindow\Converters\StateToMonikerConverter.cs" />
     <Compile Include="Features\ToolWindow\Converters\TooltipConverter.cs" />
     <Compile Include="Features\ToolWindow\Converters\StateToBrushConverter.cs" />
-    <Compile Include="Features\HealthChecks\StateMetadata.cs" />
+    <Compile Include="Features\Monitors\StateMetadata.cs" />
     <Compile Include="Infrastructure\Discovery.cs" />
     <Compile Include="Infrastructure\Extensions.cs" />
-    <Compile Include="Features\HealthChecks\TCP.cs" />
-    <Compile Include="Features\HealthChecks\TeamCityBuild.cs" />
-    <Compile Include="Features\HealthChecks\TfsBuild.cs" />
-    <Compile Include="Features\HealthChecks\WindowsService.cs" />
-    <Compile Include="Features\HealthChecks\TravisCIBuild.cs" />
+    <Compile Include="Features\Monitors\TCP.cs" />
+    <Compile Include="Features\Monitors\TeamCityBuild.cs" />
+    <Compile Include="Features\Monitors\TfsBuild.cs" />
+    <Compile Include="Features\Monitors\WindowsService.cs" />
+    <Compile Include="Features\Monitors\TravisCIBuild.cs" />
     <Compile Include="Features\ToolWindow\EditableTextBlock.cs" />
     <Compile Include="Core\UsageReporting\AnalyticsReporter.cs" />
     <Compile Include="Core\UsageReporting\IUsageReporter.cs" />
@@ -190,13 +190,13 @@
     <Compile Include="Core\ViewLocator.cs" />
     <Compile Include="Core\Logging\ILogger.cs" />
     <Compile Include="Core\Settings\IUserSettings.cs" />
-    <Compile Include="Features\HealthChecks\Folder.cs" />
+    <Compile Include="Features\Monitors\Folder.cs" />
     <Compile Include="Core\Monitoring\IHandler.cs" />
-    <Compile Include="Features\HealthChecks\HttpStatus.cs" />
-    <Compile Include="Features\HealthChecks\Item.cs" />
-    <Compile Include="Features\HealthChecks\JenkinsBuild.cs" />
-    <Compile Include="Features\HealthChecks\Ping.cs" />
-    <Compile Include="Features\HealthChecks\Template.cs" />
+    <Compile Include="Features\Monitors\HttpStatus.cs" />
+    <Compile Include="Features\Monitors\Item.cs" />
+    <Compile Include="Features\Monitors\JenkinsBuild.cs" />
+    <Compile Include="Features\Monitors\Ping.cs" />
+    <Compile Include="Features\Monitors\Template.cs" />
     <Compile Include="Infrastructure\SerializableDictionary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
