--- a/src/AnyStatus/AnyStatus.csproj
+++ b/src/AnyStatus/AnyStatus.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Features\ToolWindow\Converters\StateToBrushConverter.cs" />
     <Compile Include="Features\Monitors\StateMetadata.cs" />
     <Compile Include="Infrastructure\Discovery.cs" />
+    <Compile Include="Infrastructure\Enumeration.cs" />
     <Compile Include="Infrastructure\Extensions.cs" />
     <Compile Include="Features\Monitors\TCP.cs" />
     <Compile Include="Features\Monitors\TeamCityBuild.cs" />
