--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,13 @@
+version: 0.9.{build}
+
 skip_commits:
   files:
     - art/*
     - '**/*.md'
+  
+branches:
+  only:
+  - master
 
 configuration: Release
 
@@ -17,5 +23,5 @@ before_build:
 build_script:
   - msbuild src\AnyStatus.sln /p:configuration=Release /p:DeployExtension=false /p:ZipPackageCompressionLevel=normal /v:m
 
-#after_test:
-#  - ps: Vsix-PushArtifacts | Vsix-PublishToGallery
+after_test:
+  - ps: Vsix-PushArtifacts | Vsix-PublishToGallery
