--- a/src/AnyStatus.Tests/packages.config
+++ b/src/AnyStatus.Tests/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="FluentScheduler" version="5.0.0" targetFramework="net452" />
   <package id="NSubstitute" version="1.10.0.0" targetFramework="net452" />
+  <package id="OpenCover" version="4.6.519" targetFramework="net452" />
+  <package id="ReportGenerator" version="2.5.1" targetFramework="net452" />
 </packages>
