--- a/src/AnyStatus.Tests/AnyStatus.Tests.csproj
+++ b/src/AnyStatus.Tests/AnyStatus.Tests.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Tests\JobSchedulerTests.cs" />
     <Compile Include="Tests\ScheduledJobTests.cs" />
     <Compile Include="Tests\ToolbarCommandsTests.cs" />
+    <Compile Include="Tests\ToolWindowViewModelTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AnyStatus\AnyStatus.csproj">
