--- a/src/AnyStatus.Tests/AnyStatus.Tests.csproj
+++ b/src/AnyStatus.Tests/AnyStatus.Tests.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Tests\ScheduledJobTests.cs" />
     <Compile Include="Tests\ToolbarCommandsTests.cs" />
     <Compile Include="Tests\ToolWindowViewModelTests.cs" />
+    <Compile Include="Tests\MediatorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AnyStatus\AnyStatus.csproj">
