--- a/src/AnyStatus/AnyStatus.csproj
+++ b/src/AnyStatus/AnyStatus.csproj
@@ -149,7 +149,7 @@
     <Compile Include="Features\Monitors\ICanOpenInBrowser.cs" />
     <Compile Include="Features\Monitors\IOpenInBrowser.cs" />
     <Compile Include="Features\New\AddNewItemCommand.cs" />
-    <Compile Include="Features\ToolWindow\Commands\OpenInBrowserCommand.cs" />
+    <Compile Include="Features\ToolWindow\Commands\AddFolderCommand.cs" />
     <Compile Include="Features\ToolWindow\ToolbarCommands\BaseCommand.cs" />
     <Compile Include="Features\ToolWindow\ToolbarCommands\CollapseAllCommand.cs" />
     <Compile Include="Features\ToolWindow\ToolbarCommands\ExpandAllCommand.cs" />
@@ -214,7 +214,7 @@
     <Compile Include="Core\ViewLocator\ViewLocator.cs" />
     <Compile Include="Core\Logging\ILogger.cs" />
     <Compile Include="Core\Monitoring\Folder.cs" />
-    <Compile Include="Core\Monitoring\IHandler.cs" />
+    <Compile Include="Core\Mediator\IHandler.cs" />
     <Compile Include="Features\Monitors\Http.cs" />
     <Compile Include="Core\Monitoring\Item.cs" />
     <Compile Include="Features\Monitors\JenkinsBuild.cs" />
