--- a/src/AnyStatus/AnyStatus.csproj
+++ b/src/AnyStatus/AnyStatus.csproj
@@ -148,12 +148,11 @@
     <Compile Include="Core\Settings\SettingsStore.cs" />
     <Compile Include="Core\Monitoring\ICanOpenInBrowser.cs" />
     <Compile Include="Core\Monitoring\IOpenInBrowser.cs" />
-    <Compile Include="Features\New\AddNewItemCommand.cs" />
     <Compile Include="Features\ToolWindow\Commands\AddFolderCommand.cs" />
     <Compile Include="Features\ToolWindow\Commands\ItemCommand.cs" />
     <Compile Include="Features\ToolWindow\Commands\DuplicateCommand.cs" />
-    <Compile Include="Features\ToolWindow\Commands\AddItemCommand.cs" />
-    <Compile Include="Features\ToolWindow\Commands\EditItemCommand.cs" />
+    <Compile Include="Features\ToolWindow\Commands\ShowAddDialogCommand.cs" />
+    <Compile Include="Features\ToolWindow\Commands\ShowEditDialogCommand.cs" />
     <Compile Include="Features\ToolWindow\Commands\MoveDownCommand .cs" />
     <Compile Include="Features\ToolWindow\Commands\RefreshCommand.cs" />
     <Compile Include="Features\ToolWindow\Commands\MoveUpCommand.cs" />
@@ -197,7 +196,7 @@
     <Compile Include="Infrastructure\Converters\HexToColorConverter.cs" />
     <Compile Include="Infrastructure\Converters\IconConverter.cs" />
     <Compile Include="Infrastructure\Converters\TooltipConverter.cs" />
-    <Compile Include="Infrastructure\Discovery.cs" />
+    <Compile Include="Infrastructure\TypeFinder.cs" />
     <Compile Include="Infrastructure\Enumeration.cs" />
     <Compile Include="Infrastructure\Extensions.cs" />
     <Compile Include="Features\Monitors\TCP.cs" />
@@ -218,7 +217,6 @@
     <Compile Include="Core\Logging\Logger.cs" />
     <Compile Include="Infrastructure\ProcessStarter.cs" />
     <Compile Include="Infrastructure\Retry.cs" />
-    <Compile Include="Core\ViewLocator\ViewLocator.cs" />
     <Compile Include="Core\Logging\ILogger.cs" />
     <Compile Include="Core\Monitoring\Folder.cs" />
     <Compile Include="Core\Mediator\IHandler.cs" />
@@ -236,7 +234,6 @@
     <Compile Include="Infrastructure\RelayCommand.cs" />
     <Compile Include="Core\Settings\Properties.Settings.cs" />
     <Compile Include="Infrastructure\TinyIoc.cs" />
-    <Compile Include="Core\ViewLocator\IViewLocator.cs" />
     <Compile Include="Features\New\NewViewModel.cs" />
     <Compile Include="Features\Options\General\GeneralOptionsViewModel.cs" />
     <Compile Include="Features\ToolWindow\ToolWindowViewModel.cs" />
