--- a/src/AnyStatus.Tests/AnyStatus.Tests.csproj
+++ b/src/AnyStatus.Tests/AnyStatus.Tests.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Tests\Commands\AddFolderCommandTests.cs" />
     <Compile Include="Tests\Commands\AddCommandTests.cs" />
     <Compile Include="Tests\Commands\ItemCommandTests.cs" />
+    <Compile Include="Tests\Commands\EditCommandTests.cs" />
     <Compile Include="Tests\ItemTests.cs" />
     <Compile Include="Tests\AnalyticsReporterTests.cs" />
     <Compile Include="Tests\FolderTests.cs" />
