--- a/src/AnyStatus.Tests/AnyStatus.Tests.csproj
+++ b/src/AnyStatus.Tests/AnyStatus.Tests.csproj
@@ -133,24 +133,24 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tests\Commands\TestCommandTests.cs" />
-    <Compile Include="Tests\Commands\RefreshCommandTests.cs" />
-    <Compile Include="Tests\Commands\AddFolderCommandTests.cs" />
-    <Compile Include="Tests\Commands\AddCommandTests.cs" />
-    <Compile Include="Tests\Commands\ItemCommandTests.cs" />
-    <Compile Include="Tests\Commands\EditCommandTests.cs" />
-    <Compile Include="Tests\Commands\DeleteCommandTests.cs" />
-    <Compile Include="Tests\ItemTests.cs" />
-    <Compile Include="Tests\AnalyticsReporterTests.cs" />
-    <Compile Include="Tests\FolderTests.cs" />
-    <Compile Include="Tests\SetupAssemblyInitializer.cs" />
-    <Compile Include="Tests\SettingsStoreTests.cs" />
-    <Compile Include="Tests\AnyStatusAppTests.cs" />
-    <Compile Include="Tests\JobSchedulerTests.cs" />
-    <Compile Include="Tests\ScheduledJobTests.cs" />
-    <Compile Include="Tests\ToolbarCommandsTests.cs" />
-    <Compile Include="Tests\ToolWindowViewModelTests.cs" />
-    <Compile Include="Tests\MediatorTests.cs" />
+    <Compile Include="Commands\TestCommandTests.cs" />
+    <Compile Include="Commands\RefreshCommandTests.cs" />
+    <Compile Include="Commands\AddFolderCommandTests.cs" />
+    <Compile Include="Commands\AddCommandTests.cs" />
+    <Compile Include="Commands\ItemCommandTests.cs" />
+    <Compile Include="Commands\EditCommandTests.cs" />
+    <Compile Include="Commands\DeleteCommandTests.cs" />
+    <Compile Include="Core\ItemTests.cs" />
+    <Compile Include="Core\AnalyticsReporterTests.cs" />
+    <Compile Include="Core\FolderTests.cs" />
+    <Compile Include="Core\SetupAssemblyInitializer.cs" />
+    <Compile Include="Core\SettingsStoreTests.cs" />
+    <Compile Include="Core\AnyStatusAppTests.cs" />
+    <Compile Include="Core\JobSchedulerTests.cs" />
+    <Compile Include="Core\ScheduledJobTests.cs" />
+    <Compile Include="Commands\ToolbarCommandsTests.cs" />
+    <Compile Include="Core\ToolWindowViewModelTests.cs" />
+    <Compile Include="Core\MediatorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AnyStatus\AnyStatus.csproj">
