--- a/src/AnyStatus.Tests/AnyStatus.Tests.csproj
+++ b/src/AnyStatus.Tests/AnyStatus.Tests.csproj
@@ -132,6 +132,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Commands\EnableCommandTests.cs" />
+    <Compile Include="Commands\DisableCommandTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Commands\TestCommandTests.cs" />
     <Compile Include="Commands\RefreshCommandTests.cs" />
