--- a/src/AnyStatus.Tests/packages.config
+++ b/src/AnyStatus.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="coveralls.io" version="1.3.4" targetFramework="net452" />
   <package id="FluentScheduler" version="5.0.0" targetFramework="net452" />
   <package id="Microsoft.VisualStudio.Imaging" version="14.3.25407" targetFramework="net452" />
   <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6070" targetFramework="net452" />
