--- a/master.yml
+++ b/master.yml
@@ -29,5 +29,5 @@ build_script:
 
 after_test:
   - ps: Vsix-PushArtifacts | Vsix-PublishToGallery
-  - cmd: src\packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -filter:"+[*]*" -target:"C:\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE\MSTest.exe" -targetargs:"/testcontainer:AnyStatus.Tests/bin/Release/AnyStatus.Tests.dll" -output:coverage.xml
+  - cmd: src\packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -filter:"+[*]*" -target:"C:\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE\MSTest.exe" -targetargs:"/testcontainer:src/AnyStatus.Tests/bin/Release/AnyStatus.Tests.dll" -output:coverage.xml
   - cmd: src\packages\coveralls.io.1.3.4\tools\coveralls.net.exe --opencover coverage.xml
