cleanup + add command tests

--- a/src/AnyStatus/AnyStatus.csproj
+++ b/src/AnyStatus/AnyStatus.csproj
@@ -142,13 +142,13 @@
     <Compile Include="Core\ICommandRegistry.cs" />
     <Compile Include="Core\Mediator\IMediator.cs" />
     <Compile Include="Core\Mediator\Mediator.cs" />
-    <Compile Include="Core\Monitoring\IScheduledJob.cs" />
+    <Compile Include="Core\Domain\IScheduledJob.cs" />
     <Compile Include="Core\Settings\UserSettings.cs" />
     <Compile Include="Core\Settings\ISettings.cs" />
     <Compile Include="Core\Settings\ISettingsStore.cs" />
     <Compile Include="Core\Settings\SettingsStore.cs" />
-    <Compile Include="Core\Monitoring\ICanOpenInBrowser.cs" />
-    <Compile Include="Core\Monitoring\IOpenInBrowser.cs" />
+    <Compile Include="Core\Domain\ICanOpenInBrowser.cs" />
+    <Compile Include="Core\Domain\IOpenInBrowser.cs" />
     <Compile Include="Features\Edit\EditCommand.cs" />
     <Compile Include="Features\New\TestCommand.cs" />
     <Compile Include="Features\New\AddCommand.cs" />
@@ -179,11 +179,11 @@
     <Compile Include="Features\Monitors\BatchFile.cs" />
     <Compile Include="Core\Monitoring\IScheduledItem.cs" />
     <Compile Include="Features\Monitors\Dummy.cs" />
-    <Compile Include="Core\Monitoring\State.cs" />
-    <Compile Include="Core\Monitoring\RootItem.cs" />
+    <Compile Include="Core\Domain\State.cs" />
+    <Compile Include="Core\Domain\RootItem.cs" />
     <Compile Include="Features\Monitors\GitHubIssue.cs" />
     <Compile Include="Features\Monitors\PowerShellScript.cs" />
-    <Compile Include="Core\Monitoring\StateMetadata.cs" />
+    <Compile Include="Core\Domain\StateMetadata.cs" />
     <Compile Include="Features\Monitors\TfsWorkItem.cs" />
     <Compile Include="Core\Settings\Theme.cs" />
     <Compile Include="Features\Options\UserInterface\UserInterfaceOptions.cs">
@@ -224,10 +224,10 @@
     <Compile Include="Infrastructure\ProcessStarter.cs" />
     <Compile Include="Infrastructure\Retry.cs" />
     <Compile Include="Core\Logging\ILogger.cs" />
-    <Compile Include="Core\Monitoring\Folder.cs" />
+    <Compile Include="Core\Domain\Folder.cs" />
     <Compile Include="Core\Mediator\IHandler.cs" />
     <Compile Include="Features\Monitors\Http.cs" />
-    <Compile Include="Core\Monitoring\Item.cs" />
+    <Compile Include="Core\Domain\Item.cs" />
     <Compile Include="Features\Monitors\JenkinsBuild.cs" />
     <Compile Include="Features\Monitors\Ping.cs" />
     <Compile Include="Features\Monitors\Template.cs" />
