--- a/src/AnyStatus.Integration.Tests/AnyStatus.Integration.Tests.csproj
+++ b/src/AnyStatus.Integration.Tests/AnyStatus.Integration.Tests.csproj
@@ -105,13 +105,17 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
     <Compile Include="MonitoringHandlersTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="BatchScriptTests.cs" />
+    <Compile Include="PowerShellScriptTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AnyStatus\AnyStatus.csproj">
