--- a/src/AnyStatus/AnyStatus.csproj
+++ b/src/AnyStatus/AnyStatus.csproj
@@ -162,6 +162,8 @@
     <Compile Include="Features\ToolWindow\Commands\MoveDownCommand .cs" />
     <Compile Include="Features\ToolWindow\Commands\RefreshCommand.cs" />
     <Compile Include="Features\ToolWindow\Commands\MoveUpCommand.cs" />
+    <Compile Include="Features\ToolWindow\ToolbarCommands\NewFolderCommand.cs" />
+    <Compile Include="Features\ToolWindow\ToolbarCommands\NewItemCommand.cs" />
     <Compile Include="Features\ToolWindow\ToolbarCommands\ToolbarCommand.cs" />
     <Compile Include="Features\ToolWindow\ToolbarCommands\CollapseAllCommand.cs" />
     <Compile Include="Features\ToolWindow\ToolbarCommands\ExpandAllCommand.cs" />
