--- a/src/AnyStatus/AnyStatus.csproj
+++ b/src/AnyStatus/AnyStatus.csproj
@@ -154,24 +154,24 @@
     <Compile Include="Features\Edit\EditCommand.cs" />
     <Compile Include="Features\New\TestCommand.cs" />
     <Compile Include="Features\New\AddCommand.cs" />
-    <Compile Include="Features\ToolWindow\Commands\AddFolderCommand.cs" />
-    <Compile Include="Features\ToolWindow\Commands\ItemCommand.cs" />
-    <Compile Include="Features\ToolWindow\Commands\DuplicateCommand.cs" />
-    <Compile Include="Features\ToolWindow\Commands\ShowAddDialogCommand.cs" />
-    <Compile Include="Features\ToolWindow\Commands\ShowEditDialogCommand.cs" />
-    <Compile Include="Features\ToolWindow\Commands\MoveDownCommand .cs" />
-    <Compile Include="Features\ToolWindow\Commands\RefreshCommand.cs" />
-    <Compile Include="Features\ToolWindow\Commands\MoveUpCommand.cs" />
-    <Compile Include="Features\ToolWindow\ToolbarCommands\NewFolderCommand.cs" />
-    <Compile Include="Features\ToolWindow\ToolbarCommands\NewItemCommand.cs" />
-    <Compile Include="Features\ToolWindow\ToolbarCommands\ToolbarCommand.cs" />
-    <Compile Include="Features\ToolWindow\ToolbarCommands\CollapseAllCommand.cs" />
-    <Compile Include="Features\ToolWindow\ToolbarCommands\ExpandAllCommand.cs" />
-    <Compile Include="Features\ToolWindow\ToolbarCommands\IToolbarCommand.cs" />
-    <Compile Include="Features\ToolWindow\ToolbarCommands\RefreshAllCommand.cs" />
-    <Compile Include="Features\ToolWindow\ToolbarCommands\OptionsCommand.cs" />
-    <Compile Include="Features\ToolWindow\ToolbarCommands\HelpCommand.cs" />
-    <Compile Include="Features\ToolWindow\ToolbarCommands\ToolWindowPackage.cs" />
+    <Compile Include="Core\Commands\AddFolderCommand.cs" />
+    <Compile Include="Core\Commands\ItemCommand.cs" />
+    <Compile Include="Core\Commands\DuplicateCommand.cs" />
+    <Compile Include="Core\Commands\ShowAddDialogCommand.cs" />
+    <Compile Include="Core\Commands\ShowEditDialogCommand.cs" />
+    <Compile Include="Core\Commands\MoveDownCommand .cs" />
+    <Compile Include="Core\Commands\RefreshCommand.cs" />
+    <Compile Include="Core\Commands\MoveUpCommand.cs" />
+    <Compile Include="Core\Commands\ToolbarCommands\NewFolderCommand.cs" />
+    <Compile Include="Core\Commands\ToolbarCommands\NewItemCommand.cs" />
+    <Compile Include="Core\Commands\ToolbarCommands\ToolbarCommand.cs" />
+    <Compile Include="Core\Commands\ToolbarCommands\CollapseAllCommand.cs" />
+    <Compile Include="Core\Commands\ToolbarCommands\ExpandAllCommand.cs" />
+    <Compile Include="Core\Commands\ToolbarCommands\IToolbarCommand.cs" />
+    <Compile Include="Core\Commands\ToolbarCommands\RefreshAllCommand.cs" />
+    <Compile Include="Core\Commands\ToolbarCommands\OptionsCommand.cs" />
+    <Compile Include="Core\Commands\ToolbarCommands\HelpCommand.cs" />
+    <Compile Include="Core\Commands\ToolbarCommands\ToolWindowPackage.cs" />
     <Compile Include="Features\Edit\EditWindow.xaml.cs">
       <DependentUpon>EditWindow.xaml</DependentUpon>
     </Compile>
@@ -198,9 +198,9 @@
       <DependentUpon>UserInterfaceOptionsView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Features\Options\UserInterface\UserInterfaceOptionsViewModel.cs" />
-    <Compile Include="Features\ToolWindow\Commands\DeleteCommand.cs" />
-    <Compile Include="Features\ToolWindow\Commands\DisableCommand.cs" />
-    <Compile Include="Features\ToolWindow\Commands\EnableCommand.cs" />
+    <Compile Include="Core\Commands\DeleteCommand.cs" />
+    <Compile Include="Core\Commands\DisableCommand.cs" />
+    <Compile Include="Core\Commands\EnableCommand.cs" />
     <Compile Include="Infrastructure\Converters\HexToBrushConverter.cs" />
     <Compile Include="Infrastructure\Converters\HexToColorConverter.cs" />
     <Compile Include="Infrastructure\Converters\IconConverter.cs" />
