- removed dependency between core and vs-sdk - improved handlers registration - cleanup

--- a/src/AnyStatus.VSPackage/AnyStatus.VSPackage.csproj
+++ b/src/AnyStatus.VSPackage/AnyStatus.VSPackage.csproj
@@ -57,6 +57,7 @@
     <Compile Include="CommandRegistry.cs" />
     <Compile Include="ContainerBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Logger.cs" />
     <Compile Include="ToolWindowCmd.cs" />
     <Compile Include="ToolWindowHost.cs" />
     <Compile Include="AnyStatusPackage.cs" />
