--- a/src/AnyStatus/AnyStatus.csproj
+++ b/src/AnyStatus/AnyStatus.csproj
@@ -140,6 +140,7 @@
   <ItemGroup>
     <Compile Include="Core\AnyStatusApp.cs" />
     <Compile Include="Core\Domain\ICanTriggerBuild.cs" />
+    <Compile Include="Core\Domain\IPackage.cs" />
     <Compile Include="Core\Domain\ITriggerBuild.cs" />
     <Compile Include="Core\ICommandRegistry.cs" />
     <Compile Include="Core\Mediator\IMediator.cs" />
@@ -225,10 +226,9 @@
     <Compile Include="Core\Monitoring\IJobScheduler.cs" />
     <Compile Include="Core\Monitoring\JobScheduler.cs" />
     <Compile Include="Core\Monitoring\ScheduledJob.cs" />
-    <Compile Include="Core\Logging\Logger.cs" />
     <Compile Include="Infrastructure\ProcessStarter.cs" />
     <Compile Include="Infrastructure\Retry.cs" />
-    <Compile Include="Core\Logging\ILogger.cs" />
+    <Compile Include="Core\ILogger.cs" />
     <Compile Include="Core\Domain\Folder.cs" />
     <Compile Include="Core\Mediator\IHandler.cs" />
     <Compile Include="Features\Monitors\Http.cs" />
