--- a/src/AnyStatus.VSPackage/AnyStatus.VSPackage.csproj
+++ b/src/AnyStatus.VSPackage/AnyStatus.VSPackage.csproj
@@ -57,8 +57,13 @@
     <Compile Include="CommandRegistry.cs" />
     <Compile Include="ContainerBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\GeneralOptions.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Services\Logger.cs" />
-    <Compile Include="ToolWindowCmd.cs" />
+    <Compile Include="Services\UserInterfaceOptions.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="ToolWindowHost.cs" />
     <Compile Include="AnyStatusPackage.cs" />
     <Compile Include="ToolWindowPackage.cs">
